--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-cheese fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Wedding Services</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Elegant wedding catering: delicious menus, flawless service, unforgettable experiences."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -240,7 +240,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-pizza-slice fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Corporate Catering</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Professional corporate catering: impressive menus, seamless service, successful events."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -252,7 +252,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-hotdog fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Cocktail Reception</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Stylish cocktail receptions: exquisite bites, creative drinks, memorable moments."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -264,7 +264,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-hamburger fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Bento Catering</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Chic bento catering: artfully crafted boxes with balanced, flavorful meals."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-wine-glass-alt fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Pub Party</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Fun pub party catering: hearty bites, craft drinks, lively atmosphere."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -288,7 +288,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-walking fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Home Delivery</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Convenient home delivery: fresh meals, effortless ordering, quick service."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -298,9 +298,9 @@
                         <div class="bg-light rounded service-item">
                             <div class="service-content d-flex align-items-center justify-content-center p-4">
                                 <div class="service-content-icon text-center">
-                                    <i class="fas fa-wheelchair fa-7x text-primary mb-4"></i>
+                                    <i class="fas fa-chair fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Sit-down Catering</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Elegant sit-down catering: refined meals, attentive service, memorable dining."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -312,7 +312,7 @@
                                 <div class="service-content-icon text-center">
                                     <i class="fas fa-utensils fa-7x text-primary mb-4"></i>
                                     <h4 class="mb-3">Buffet Catering</h4>
-                                    <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
+                                    <p class="mb-4">"Delicious buffet catering: diverse dishes, self-serve style, casual dining."</p>
                                     <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
                                 </div>
                             </div>
