--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
                         <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
                         <h1 class="display-5 mb-4">Trusted By 200 + satisfied clients</h1>
-                        <p class="mb-4">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore eit esdioilore magna aliqua. Ut enim ad minim veniam, 
-                            quis nostrud exercitation ullaemco laboeeiris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                            dolor iesdein reprehendeerit in voluptate velit esse cillum dolore.</p>
+                        <p class="mb-4">At Wangeci’s Kitchen, we believe that exceptional catering is not just about serving food—it’s about
+                             crafting memorable experiences. Founded with a passion for culinary excellence and a commitment to impeccable service, 
+                             our company is dedicated to transforming every event into a sophisticated celebration.</p>
                         <div class="row g-4 text-dark mb-5">
                             <div class="col-sm-6">
                                 <i class="fas fa-share text-primary me-2"></i>Fresh and Fast food Delivery
@@ -140,7 +140,7 @@
                                 <i class="fas fa-share text-primary me-2"></i>24/7 Customer Support
                             </div>
                             <div class="col-sm-6">
-                                <i class="fas fa-share text-primary me-2"></i>Easy Customization Options
+                                <i class="fas fa-share text-primary me-2"></i>Easy Menu Customization Options
                             </div>
                             <div class="col-sm-6">
                                 <i class="fas fa-share text-primary me-2"></i>Delicious Deals for Delicious Meals
@@ -170,14 +170,14 @@
                             <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.5s">
                                 <div class="faqt-item bg-primary rounded p-4 text-center">
                                     <i class="fas fa-users-cog fa-4x mb-4 text-white"></i>
-                                    <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">107</h1>
+                                    <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">21</h1>
                                     <p class="text-light text-uppercase fw-bold mb-0">Expert Chefs</p>
                                 </div>
                             </div>
                             <div class="col-sm-4 wow bounceInUp" data-wow-delay="0.7s">
                                 <div class="faqt-item bg-primary rounded p-4 text-center">
                                     <i class="fas fa-check fa-4x mb-4 text-white"></i>
-                                    <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">253</h1>
+                                    <h1 class="display-4 text-light fw-bold" data-toggle="counter-up">99</h1>
                                     <p class="text-light text-uppercase fw-bold mb-0">Events Complete</p>
                                 </div>
                             </div>
@@ -562,12 +562,12 @@
                     <ul class="nav nav-pills d-inline-flex justify-content-center mb-5 wow bounceInUp" data-wow-delay="0.1s">
                         <li class="nav-item p-2">
                             <a class="d-flex py-2 mx-2 border border-primary bg-white rounded-pill active" data-bs-toggle="pill" href="#tab-6">
-                                <span class="text-dark" style="width: 150px;">Starter</span>
+                                <span class="text-dark" style="width: 150px;">Dishes</span>
                             </a>
                         </li>
                         <li class="nav-item p-2">
                             <a class="d-flex py-2 mx-2 border border-primary bg-white rounded-pill" data-bs-toggle="pill" href="#tab-7">
-                                <span class="text-dark" style="width: 150px;">Main Course</span>
+                                <span class="text-dark" style="width: 150px;">Starter</span>
                             </a>
                         </li>
                         <li class="nav-item p-2">
@@ -582,106 +582,106 @@
                         </li>
                         <li class="nav-item p-2">
                             <a class="d-flex py-2 mx-2 border border-primary bg-white rounded-pill" data-bs-toggle="pill" href="#tab-10">
-                                <span class="text-dark" style="width: 150px;">Our Spesial</span>
+                                <span class="text-dark" style="width: 150px;">Our Special</span>
                             </a>
                         </li>
                     </ul>
                     <div class="tab-content">
                         <div id="tab-6" class="tab-pane fade show p-0 active">
                             <div class="row g-4">
-                                <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.1s">
+                                <div class="col-lg-6">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-01.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/pilaubeef.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Paneer</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Pilau | Beef Stew | Kachumbari</h4>
+                                                <h4 class="text-primary">300/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Spicy Beef Pilau with a side of Beef Stew and Kachumbari salad.</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.2s">
+                                <div class="col-lg-6">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-02.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/ricebeef.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Sweet Potato</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Rice | Beef Stew | Veggies</h4>
+                                                <h4 class="text-primary">280/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">White Vegetable Rice with Beef Stew and Vegetables</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.3s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-03.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/chapo.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Sabudana Tikki</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Chapati | Beef Stew | Veggies</h4>
+                                                <h4 class="text-primary">280/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Soft Layered Chapatis with yummy Beef Stew and Veggies</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.4s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-04.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/dondo.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Pizza</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Chapati | Coconut Beans</h4>
+                                                <h4 class="text-primary">200/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Classic Chapati and Beans Combo with Creamy Coconut Beans</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.5s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-05.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/rice.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Bacon</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Rice | Coconut Beans</h4>
+                                                <h4 class="text-primary">180/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Fluffy White Rice with Creamy Coconut Beans.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.6s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-06.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/Githeri.jpg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Chicken</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Githeri | Veggies</h4>
+                                                <h4 class="text-primary">200/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">African Githeri with a side of Veggies.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.7s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-07.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/fish.jpg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Blooming</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Fish | Rice/Ugali | Veggies </h4>
+                                                <h4 class="text-primary">450/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Lake Victoria Fresh Fish with a side of Ugali or Rice and Veggies.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.8s">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-08.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/beef.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Sweet</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Fried Beef | Managu | Ugali </h4>
+                                                <h4 class="text-primary">300/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Stir Fried Beef with a side of Managu and Ugali.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -691,25 +691,25 @@
                             <div class="row g-4">
                                 <div class="col-lg-6">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-01.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/pilaubeef.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Argentinian</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Pilau | Beef Stew | Kachumbari</h4>
+                                                <h4 class="text-primary">300/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">Spicy Beef Pilau with a side of Beef Stew and Kachumbari salad.</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="menu-item d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/menu-03.jpg" alt="">
+                                        <img class="flex-shrink-0 img-fluid rounded-circle" src="img/ricebeef.jpeg" alt="">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <div class="d-flex justify-content-between border-bottom border-primary pb-2 mb-2">
-                                                <h4>Crispy</h4>
-                                                <h4 class="text-primary">$90</h4>
+                                                <h4>Rice | Beef Stew | Veggies</h4>
+                                                <h4 class="text-primary">280/=</h4>
                                             </div>
-                                            <p class="mb-0">Consectetur adipiscing elit sed dwso eiusmod tempor incididunt ut labore.</p>
+                                            <p class="mb-0">White Vegetable Rice with Beef Stew and Vegetables</p>
                                         </div>
                                     </div>
                                 </div>
