--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <ul class="nav nav-pills d-inline-flex justify-content-center mb-5 wow bounceInUp" data-wow-delay="0.1s">
                         <li class="nav-item p-2">
                             <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-1">
-                                <span class="text-dark" style="width: 150px;">All Events</span>
+                                <span class="tab-span text-dark" style="width: 150px;">All Events</span>
                             </a>
                         </li>
                         <li class="nav-item p-2">
