--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                             <h1 class="display-5 mb-0">Contact Us For Any Queries!</h1>
                         </div>
                         <div class="col-md-6 col-lg-7">
-                            <p class="mb-4">Get In Touch</p>
+                            <p class="mb-4">Get In Touch with us, We get back really fast.</p>
                             <form>
                                 <input type="text" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="Your Name">
                                 <input type="email" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="Enter Your Email">
@@ -240,7 +240,7 @@
                         <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Wangeci's Kitchen</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 my-auto text-center text-md-end text-white">
-                        Designed By <a class="border-bottom" href="">Tony</a></a>
+                        Designed By <a class="border-bottom" href="">TonyCodes</a></a>
                     </div>
                 </div>
             </div>
