--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5 wow bounceInUp" data-wow-delay="0.1s">
-                        <img src="img/about.jpg" class="img-fluid rounded" alt="">
+                        <img src="img/aboutt.jpeg" class="img-fluid rounded" alt="">
                     </div>
                     <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
                         <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
@@ -366,73 +366,73 @@
                                     <div class="row g-4">
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-1.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event3.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Wedding</h4>
-                                                    <a href="img/event-1.jpg" data-lightbox="event-1" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event3.jpeg" data-lightbox="event-1" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-2.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event2.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Corporate</h4>
-                                                    <a href="img/event-2.jpg" data-lightbox="event-2" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event2.jpeg" data-lightbox="event-2" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-3.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event1.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Wedding</h4>
-                                                    <a href="img/event-3.jpg" data-lightbox="event-3" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event1.jpeg" data-lightbox="event-3" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-4.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event8.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Buffet</h4>
-                                                    <a href="img/event-4.jpg" data-lightbox="event-4" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event8.jpeg" data-lightbox="event-4" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-5.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event4.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Cocktail</h4>
-                                                    <a href="img/event-5.jpg" data-lightbox="event-5" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event4.jpeg" data-lightbox="event-5" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-6.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event5.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Wedding</h4>
-                                                    <a href="img/event-6.jpg" data-lightbox="event-6" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event5.jpeg" data-lightbox="event-6" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-7.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event6.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Buffet</h4>
-                                                    <a href="img/event-7.jpg" data-lightbox="event-7" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event6.jpeg" data-lightbox="event-7" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
                                             <div class="event-img position-relative">
-                                                <img class="img-fluid rounded w-100" src="img/event-8.jpg" alt="">
+                                                <img class="img-fluid rounded w-100" src="img/event7.jpeg" alt="">
                                                 <div class="event-overlay d-flex flex-column p-4">
                                                     <h4 class="me-auto">Corporate</h4>
-                                                    <a href="img/event-8.jpg" data-lightbox="event-17" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
+                                                    <a href="img/event7.jpeg" data-lightbox="event-17" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
                                                 </div>
                                             </div>
                                         </div>
