--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- add corporate clients here ... -->
+                <div class="row g-4 align-items-center">
+                    <div class="col-lg-7">
+
+                    </div>
+
+                </div>
             </div>
         </div>
         <!-- Modal Video -->
