--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
                             </a>
                         </li>
                     </ul>
+                    <!-- start of tabs -->
                     <div class="tab-content">
                         <!-- tab 1 everything -->
                         <div id="tab-1" class="tab-pane fade show p-0 active">
@@ -554,6 +555,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End of tabs -->
                 </div>
             </div>
         </div>
@@ -1280,7 +1282,7 @@
                                 <i class="fa fa-quote-right fa-2x"></i>
                             </div>
                             <div class="ps-3 my-auto">
-                                <h4 class="mb-0">Johnson Brown</h4>
+                                <h4 class="mb-0">James Ndegwa</h4>
                                 <p class="m-0">Artist</p>
                             </div>
                         </div>
@@ -1302,7 +1304,7 @@
                                 <i class="fa fa-quote-right fa-2x"></i>
                             </div>
                             <div class="ps-3 my-auto">
-                                <h4 class="mb-0">Charlene Ruto</h4>
+                                <h4 class="mb-0">Regina Masai</h4>
                                 <p class="m-0">Activist</p>
                             </div>
                         </div>
@@ -1346,7 +1348,7 @@
                                 <i class="fa fa-quote-right fa-2x"></i>
                             </div>
                             <div class="ps-3 my-auto">
-                                <h4 class="mb-0">Barrack Nathan</h4>
+                                <h4 class="mb-0">David Burke</h4>
                                 <p class="m-0">Professor</p>
                             </div>
                         </div>
